feat: expose atomic ioa protocol APIs
